@@ -26,15 +26,15 @@ import cascading.flow.FlowProcess;
 import cascading.operation.Function;
 import cascading.operation.FunctionCall;
 import cascading.tuple.Fields;
-
-import static cascading.tuple.coerce.Coercions.asClass;
+import cascading.tuple.Tuple;
 
 /**
- * Class ScriptFunction dynamically resolves a given expression using argument {@link cascading.tuple.Tuple} values.
+ * Class ScriptTupleFunction dynamically resolves a given expression using argument {@link cascading.tuple.Tuple} values.
  * This {@link cascading.operation.Function} is based on the <a href="http://www.janino.net/">Janino</a> compiler.
  * <p/>
- * This class is different from {@link ScriptTupleFunction} in that it allows any return type instance to be returned
- * by the script. ScriptTupleFunction allows only a single {@code Tuple} instance to be returned.
+ * This class is different from {@link ScriptFunction} in that it requires a new {@link Tuple} instance to be returned
+ * by the script. ScriptFunction allows only a single value to be returned, which is passed into a result Tuple instance
+ * internally.
  * <p/>
  * Specifically this function uses the {@link org.codehaus.janino.ScriptEvaluator},
  * thus the syntax from that class is inherited here.
@@ -44,15 +44,17 @@ import static cascading.tuple.coerce.Coercions.asClass;
  * <p/>
  * Given an argument tuple with the fields "a" and "b", the following script returns true: <br/>
  * <code>boolean result = (a + b == $0 + $1);</code><br/>
- * <code>return boolean;</code><br/>
+ * <code>return cascading.tuple.Tuples.tuple( boolean );</code><br/>
  * <p/>
- * Unlike an "expression" used by {@link ExpressionFunction}, a "script" requires each line to end in an semi-colon
- * (@{code ;}) and the final line to be a {@code return} statement.
+ * Unlike an "expression" used by {@link cascading.operation.expression.ExpressionFunction}, a "script" requires each line to end in an semi-colon
+ * (@{code ;}) and the final line to be a {@code return} statement that returns a new {@link Tuple} instance.
+ * <p/>
+ * Since Janino does not support "varargs", see the {@link cascading.tuple.Tuples} class for helper methods.
  * <p/>
  * Further, the types of the tuple elements will be coerced into the given parameterTypes. Regardless of the actual
  * tuple element values, they will be converted to the types expected by the script if possible.
  */
-public class ScriptFunction extends ScriptOperation implements Function<ScriptOperation.Context>
+public class ScriptTupleFunction extends ScriptOperation implements Function<ScriptOperation.Context>
   {
   /**
    * Constructor ScriptFunction creates a new ScriptFunction instance.
@@ -67,29 +69,9 @@ public class ScriptFunction extends ScriptOperation implements Function<ScriptOp
    * @param returnType       of type Class
    */
   @ConstructorProperties({"fieldDeclaration", "script"})
-  public ScriptFunction( Fields fieldDeclaration, String script )
+  public ScriptTupleFunction( Fields fieldDeclaration, String script )
     {
-    super( ANY, fieldDeclaration, script );
-
-    verify( fieldDeclaration );
-    }
-
-  /**
-   * Constructor ScriptFunction creates a new ScriptFunction instance.
-   * <p/>
-   * This constructor will use the runtime {@link cascading.operation.OperationCall#getArgumentFields()}
-   * to source the {@code parameterNames} and {@code parameterTypes} required by the other constructors.
-   *
-   * @param fieldDeclaration of type Fields
-   * @param script           of type String
-   * @param returnType       of type Class
-   */
-  @ConstructorProperties({"fieldDeclaration", "script", "returnType"})
-  public ScriptFunction( Fields fieldDeclaration, String script, Class returnType )
-    {
-    super( ANY, fieldDeclaration, script, returnType );
-
-    verify( fieldDeclaration );
+    super( ANY, fieldDeclaration, script, Tuple.class );
     }
 
   /**
@@ -101,36 +83,12 @@ public class ScriptFunction extends ScriptOperation implements Function<ScriptOp
    *
    * @param fieldDeclaration of type Fields
    * @param script           of type String
-   * @param returnType       of type Class
-   * @param parameterNames   of type String[]
    * @param expectedTypes    of type Class[]
    */
-  @ConstructorProperties({"fieldDeclaration", "script", "returnType", "expectedTypes"})
-  public ScriptFunction( Fields fieldDeclaration, String script, Class returnType, Class[] expectedTypes )
+  @ConstructorProperties({"fieldDeclaration", "script", "expectedTypes"})
+  public ScriptTupleFunction( Fields fieldDeclaration, String script, Class[] expectedTypes )
     {
-    super( expectedTypes.length, fieldDeclaration, script, returnType, expectedTypes );
-
-    verify( fieldDeclaration );
-    }
-
-  /**
-   * Constructor ScriptFunction creates a new ScriptFunction instance.
-   * <p/>
-   * This constructor expects all parameter type names to be declared with their types. Positional parameters must
-   * be named the same as in the given script with the "$" sign prepended.
-   *
-   * @param fieldDeclaration of type Fields
-   * @param script           of type String
-   * @param returnType       of type Class
-   * @param parameterNames   of type String[]
-   * @param parameterTypes   of type Class[]
-   */
-  @ConstructorProperties({"fieldDeclaration", "script", "returnType", "parameterNames", "parameterTypes"})
-  public ScriptFunction( Fields fieldDeclaration, String script, Class returnType, String[] parameterNames, Class[] parameterTypes )
-    {
-    super( parameterTypes.length, fieldDeclaration, script, returnType, parameterNames, parameterTypes );
-
-    verify( fieldDeclaration );
+    super( expectedTypes.length, fieldDeclaration, script, Tuple.class, expectedTypes );
     }
 
   /**
@@ -145,23 +103,14 @@ public class ScriptFunction extends ScriptOperation implements Function<ScriptOp
    * @param parameterTypes   of type Class[]
    */
   @ConstructorProperties({"fieldDeclaration", "script", "parameterNames", "parameterTypes"})
-  public ScriptFunction( Fields fieldDeclaration, String script, String[] parameterNames, Class[] parameterTypes )
+  public ScriptTupleFunction( Fields fieldDeclaration, String script, String[] parameterNames, Class[] parameterTypes )
     {
-    super( parameterTypes.length, fieldDeclaration, script, asClass( fieldDeclaration.getType( 0 ) ), parameterNames, parameterTypes );
-
-    verify( fieldDeclaration );
-    }
-
-  private void verify( Fields fieldDeclaration )
-    {
-    if( !fieldDeclaration.isSubstitution() && fieldDeclaration.size() != 1 )
-      throw new IllegalArgumentException( "fieldDeclaration may only declare one field, was " + fieldDeclaration.print() );
+    super( parameterTypes.length, fieldDeclaration, script, Tuple.class, parameterNames, parameterTypes );
     }
 
   @Override
   public void operate( FlowProcess flowProcess, FunctionCall<Context> functionCall )
     {
-    functionCall.getContext().result.set( 0, evaluate( functionCall.getContext(), functionCall.getArguments() ) );
-    functionCall.getOutputCollector().add( functionCall.getContext().result );
+    functionCall.getOutputCollector().add( (Tuple) evaluate( functionCall.getContext(), functionCall.getArguments() ) );
     }
   }
